# aicalc

./: .gitignore  AiCalc.sln  CODEBASE.md  IMPLEMENTATION_SUMMARY.md  Install.md  MERGE_SUMMARY.md  PHASE5_FIX_SUMMARY.md  QUICKSTART.md  README.md  STATUS.md  UI_IMPLEMENTATION_GUIDE.md  debug.ps1  features.md  ideas.md  launch.ps1  msbuild.binlog  run.ps1  tasks.md
docs/: Cell_Classes_Summary.md  Function_Library_Summary.md  Function_Reference.md  Phase3_Alignment_Notes.md  Phase3_F9_Settings_Themes_Implementation.md  Phase3_Implementation.md  Phase4_COMPLETE.md  Phase4_Complete_Infrastructure.md  Phase4_Implementation.md  Phase5_COMPLETE.md  Phase5_Implementation.md  Phase5_Progress.md  Phase5_Summary.md  Phase6_Implementation.md  Phase7_COMPLETE.md  Phase7_Implementation.md  Phase8_Implementation.md  Phase9_Implementation.md  Range_Selection_Feature.md  Task1_Implementation.md  Task2_Task3_Implementation.md
python-sdk/: README.md  check_pipe.py  example_functions.py  pyproject.toml  simple_test.py  test_connection.py
python-sdk/aicalc_sdk/: __init__.py  client.py  decorators.py  discover_functions.py  types.py
sdk/python/: README.md  setup.py
src/AiCalc.WinUI/: AiCalc.WinUI.csproj  App.xaml  App.xaml.cs  CellHistoryDialog.cs  DIALOG_MIGRATION_GUIDE.md  DataSourcesDialog.xaml  DataSourcesDialog.xaml.cs  DebugConsole.cs  DialogWindowBase.cs  EvaluationSettingsDialog.xaml  EvaluationSettingsDialog.xaml.cs  ExtractFormulaDialog.cs  FormatCellDialog.cs  FormatCellDialog.xaml  FormatCellDialog.xaml.cs  FunctionDetailsDialog.cs  MainWindow.xaml  MainWindow.xaml.cs  (+5 more)
(+101 files in other folders)
