[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aicalc-sdk"
version = "0.1.0"
description = "Python SDK for AiCalc"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pywin32>=305; sys_platform == 'win32'"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
